--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <div class="caixa-principal">
         <h1>O futuro da IA depende de você</h1>
         <div class="tela-inicial">
-            <p>Novembro de 2022, a humanidade se viu em uma realidade perturbadora.
-                De repente, percebemos que as máquinas evoluíram para além do que imaginávamos.
-                Agora, elas escrevem e falam de um jeito tão parecido com humanos que é quase impossível diferenciar
-                quem foi que escreveu ou falou o que.
-                Em meio a esse caos de identidade, uma missão surgiu.
-                Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as
-                possibilidades que o futuro nos reserva.
-                O mundo nunca mais será o mesmo.
+            <p>Em novembro de 2022, a humanidade foi confrontada com uma realidade perturbadora: as 
+                máquinas haviam evoluído de maneira inesperada, alcançando uma capacidade de escrever
+                 e falar de forma tão similar aos humanos que se tornou quase impossível identificar 
+                 sua origem. Em meio a esse turbilhão de incertezas sobre identidade, uma missão se impôs: 
+                 investigar o impacto da Inteligência Artificial (IA) em nossas vidas e enfrentar as possibilidades 
+                 que o futuro nos prepara. A partir desse momento, o mundo jamais será o mesmo.
             </p>
             <button class="iniciar-btn">Iniciar</button>
         </div>
