--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>O futuro da IA depende de você</title>
+    <title>Você decide o futuro da IA</title>
 </head>
 
 <body>
     <div class="caixa-principal">
-        <h1>O futuro da IA depende de você</h1>
+        <h1>Você decide o futuro da IA</h1>
         <div class="tela-inicial">
-            <p>Em novembro de 2022, a humanidade foi confrontada com uma realidade perturbadora: as 
-                máquinas haviam evoluído de maneira inesperada, alcançando uma capacidade de escrever
-                 e falar de forma tão similar aos humanos que se tornou quase impossível identificar 
-                 sua origem. Em meio a esse turbilhão de incertezas sobre identidade, uma missão se impôs: 
-                 investigar o impacto da Inteligência Artificial (IA) em nossas vidas e enfrentar as possibilidades 
-                 que o futuro nos prepara. A partir desse momento, o mundo jamais será o mesmo.
+            <p>Novembro de 2022, a humanidade se viu em uma realidade perturbadora.
+                De repente, percebemos que as máquinas evoluíram para além do que imaginávamos.
+                Agora, elas escrevem e falam de um jeito tão parecido com humanos que é quase impossível diferenciar
+                quem foi que escreveu ou falou o que.
+                Em meio a esse caos de identidade, uma missão surgiu.
+                Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as
+                possibilidades que o futuro nos reserva.
+                O mundo nunca mais será o mesmo.
             </p>
             <button class="iniciar-btn">Iniciar</button>
         </div>
